# dz13.c.Datastruct

./: .gitignore  README.md  main.py  pyproject.toml
datatypes/: linkedlist.py  node.py  queue.py  stack.py
tests/: test_LinkedList.py  test_Node.py  test_Queue.py  test_Stack.py
